--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="loginSection" class="login-screen">
-  <h2>Iniciar sesión o registrarse</h2>
+  <h2>Login</h2>
   <form id="loginForm">
     <input type="email" id="loginEmail" placeholder="Correo electrónico" required />
     <input type="password" id="loginPassword" placeholder="Contraseña" required />
@@ -37,7 +37,7 @@
   <aside class="sidebar hidden">
     <h2>EVENTS</h2>
     <div class="profile">
-      <img src="assets/img/avatar.png" alt="Admin Photo" />
+      <img src="./assets/imgs/avatar.png" alt="Admin Photo" />
       <p class="name">Random guy</p>
       <p class="role">Admin</p>
     </div>
@@ -63,7 +63,7 @@
   <!-- Users View (CRUD de estudiantes) -->
   <section id="usersView" class="hidden">
     <header class="top-header">
-      <h1>Students List</h1>
+      <h1>Events List</h1>
       <div class="header-actions">
         <input type="search" placeholder="Search..." />
         <button class="add-btn" id="addBtn">ADD NEW EVENT</button>
@@ -76,9 +76,8 @@
           <tr>
             <th></th>
             <th>Name</th>
-            <th>Email</th>
-            <th>Phone</th>
-            <th>Enroll Number</th>
+            <th>Description</th>
+            <th>Capacity</th>
             <th>Date of admission</th>
             <th>Actions</th>
           </tr>
@@ -102,18 +101,17 @@
           <label for="name">Name</label>
           <input type="text" id="name" required />
         </div>
+
         <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" required />
+          <label for="description">Description</label>
+          <input type="text" id="description" required />
         </div>
+
         <div class="form-group">
-          <label for="phone">Phone</label>
-          <input type="text" id="phone" required />
+          <label for="capacity">Capacity</label>
+          <input type="number" id="capacity" required />
         </div>
-        <div class="form-group">
-          <label for="enrollNumber">Enroll Number</label>
-          <input type="text" id="enrollNumber" required />
-        </div>
+
         <div class="form-group">
           <label for="dateOfAdmission">Date of Admission</label>
           <input type="date" id="dateOfAdmission" required />
